--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,61 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
+  padding: 0 50px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fb8b25;
+}
+
+.search-input {
+  flex: 1;
+  max-width: 200px;
+  margin: 10px 0;
+  font-size: 16px;
+  border: none;
+  padding: 6px 5px;
+  border-radius: 15px;
+}
+
+.navbar a {
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+}
+.title-container {
+  padding-left: 10px;
+  margin-top: 10px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  font-size: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  align-self: center;
+  transition: box-shadow 0.15s;
+  width: 80%;
+}
+
+.title-container:hover {
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
+}
+
+button {
+  border: none;
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  background-color: #fb8b25;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  padding: 2px 15px;
 }
